--- a/ext/chrome/manifest.json
+++ b/ext/chrome/manifest.json
@@ -6,9 +6,20 @@
   "version": "0.1",
   "options_ui": {
     "page": "options.html",
-    "open_in_tab": false
+    "open_in_tab": true
   },
   "background": {
     "service_worker": "service-worker.js"
+  },
+  "action": {
+    "default_title": "Create random email",
+    "default_popup": "popup.html"
+  },
+  "icons": {
+    "48":  "icons/icon-48.png",
+    "64":  "icons/icon-64.png",
+    "96":  "icons/icon-96.png",
+    "128": "icons/icon-128.png",
+    "512": "icons/icon-512.png"
   }
 }
