--- a/ext/firefox/manifest.json
+++ b/ext/firefox/manifest.json
@@ -14,5 +14,12 @@
   "action": {
     "default_title": "Create random email",
     "default_popup": "popup.html"
+  },
+  "icons": {
+    "48":  "icons/icon-48.png",
+    "64":  "icons/icon-64.png",
+    "96":  "icons/icon-96.png",
+    "128": "icons/icon-128.png",
+    "512": "icons/icon-512.png"
   }
 }
