--- a/ext/firefox/manifest.json
+++ b/ext/firefox/manifest.json
@@ -20,5 +20,12 @@
     "64":  "icons/icon-64.png",
     "96":  "icons/icon-96.png",
     "128": "icons/icon-128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "random-email-generator@noreply.kameswar.com",
+      "strict_min_version": "109.0",
+      "update_url": "https://kameswar.com/firefox-extension-updates.json"
+    }
   }
 }
